adds ability to create a snipit but not copyable

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<img src="http://www.ada.org/~/media/ADA/Publications/ADA%20News/Images/PBHS_logo_white.ashx">
+
+<p>^^^ill fix later lol</p>
 <%= yield %>
 
 </body>
