--- a/app/views/snipits/show.html.erb
+++ b/app/views/snipits/show.html.erb
@@ -1,5 +1,5 @@
 <h1 class="title">
-	Snipit <%= @snipit.title %>
+	<%= @snipit.title %>
 </h1>
 
 <p class="date">
@@ -9,3 +9,4 @@
 <p class="body">
 	<%= @snipit.body %>
 </p>
+
