--- a/app/views/snipits/index.html.erb
+++ b/app/views/snipits/index.html.erb
@@ -1,1 +1,7 @@
 <h1>index</h1>
+<% @snipits.each do |snipit| %>
+	<div class="post_wrapper">
+		<h2 class="title"> <%= link_to snipit.title, snipit %> </h2>
+		<p class="date"> <%= snipit.created_at.strftime("%B %d, %Y") %></p>
+	</div>
+	<% end %>
