--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= render 'layouts/sidebar' %>
+<div id="main_content">
+	<div id="header">
+		<p>All Posts</p>
+		<div class="buttons">
+			<button class="button"> <%= link_to "New Post", new_snipit_path %></button>
+			<button class="button"> Log Out</button>
+		</div>
+	</div>
 
-<img src="http://www.ada.org/~/media/ADA/Publications/ADA%20News/Images/PBHS_logo_white.ashx">
-
-<p>^^^ill fix later lol</p>
+<% flash.each do |name, msg| %>
+	<%= content_tag(:div, msg, class:"alert") %>
+	<% end %>
 <%= yield %>
+</div>
 
 </body>
 </html>
