--- a/app/views/snipits/new.html.erb
+++ b/app/views/snipits/new.html.erb
@@ -1,15 +1,17 @@
+<div id="page_wrapper">
 <h1>New Snipit</h1>
 <%= form_for :snipit, url: snipits_path do |f| %>
-<p>
-  <%= f.label :title %> <br/>
-  <%= f.text_field :title %>
-</p>
+	<p>
+		<%= f.label :title %> <br/>
+		<%= f.text_field :title %>
+	</p>
 
-<p>
-  <%= f.label :body %> <br/>
-  <%= f.text_area :body  %>
-</p>
-<p>
-  <%= f.submit %>
-</p>
+	<p>
+		<%= f.label :body %> <br/>
+		<%= f.text_area :body  %>
+	</p>
+	<p>
+  		<%= f.submit %>
+	</p>
 <% end %>
+</div>
