--- a/app/views/snipits/show.html.erb
+++ b/app/views/snipits/show.html.erb
@@ -1,12 +1,14 @@
-<h1 class="title">
-	<%= @snipit.title %>
-</h1>
+<div id="page_wrapper">
+	<h1 class="title">
+		<%= @snipit.title %>
+	</h1>
 
-<p class="date">
-	Submitted <%= time_ago_in_words(@snipit.created_at) %> Ago
-</p>
+	<p class="date">
+		Submitted <%= time_ago_in_words(@snipit.created_at) %> Ago
+	</p>
 
-<p class="body">
-	<%= @snipit.body %>
-</p>
+	<p class="body">
+		<%= @snipit.body %>
+	</p>
 
+</div>
