--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <%= render 'layouts/sidebar' %>
 <div id="main_content">
 	<div id="header">
-		<p>All Posts</p>
+		<p> <%= link_to "All Posts", snipits_path %></p>
 		<div class="buttons">
 			<button class="button"> <%= link_to "New Post", new_snipit_path %></button>
 			<button class="button"> Log Out</button>
