--- a/app/views/snipits/new.html.erb
+++ b/app/views/snipits/new.html.erb
@@ -1,6 +1,16 @@
 <div id="page_wrapper">
 <h1>New Snipit</h1>
 <%= form_for :snipit, url: snipits_path do |f| %>
+	<% if @snipit.errors.any? %>
+		<div id="errors">
+			<h2><%= pluralize(@snipit.errors.count, "error") %> prevented this snipit from saving</h2>
+			<ul>
+				<% @snipit.errors.full_messages.each do |msg| %>
+					<li> <%= msg %> </li>
+				<% end %>
+			</ul>
+		</div>
+	<% end %>
 	<p>
 		<%= f.label :title %> <br/>
 		<%= f.text_field :title %>
