--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,16 +7,20 @@
 
 	<ul>
 		<li class="category"> Website</li>
-		<li><%= link_to "Blog", snipits_path %></li>
-		<li> About</li>
+		<li> <%= link_to "PBHS Shortcodes", pbhs_path %></li>
+		<li> <%= link_to "How To Use", about_path %></li>
 	</ul>
 
 	<ul>
-		<li class="category"> Social</li>
-		<li><a href="#">Twitter</a></li>
-		<li><a href="#">Facebook</a></li>
-		<li><a href="#">Google Plus</a></li>
-		<li><a href="#">Email</a></li>
+		<li class="category"> Categories</li>
+		<li><%= link_to "All Snippits", snipits_path %></li>
+		<li><a href="#">Web Development</a></li>
+		<li><a href="#">Sales</a></li>
+		<li><a href="#">SEO</a></li>
+		<li><a href="#">Graphic Design</a></li>
+		<li><a href="#">Account Managers</a></li>
+		<li><a href="#">Support</a></li>
+
 	</ul>
 	<p class="sign_in">User Login</p>
 </div>
