--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,32 +1,1 @@
-<h1>Testing the clipboard</h1>
-<label for="website">Website:</label>
-<input readonly type="text" id="website" value="[PRACTICE_NAME]">
-<button data-copytarget="#website">copy</button>
-
-<label for="twitter">Twitter:</label>
-<input readonly type="text" id="twitter" value="[FULL_NAME]">
-<button data-copytarget="#twitter">copy</button>
-
-<script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout-53beeb1a007ec32040abaf4c9385ebfc.js"></script>
-<script>(function () {
-    'use strict';
-    document.body.addEventListener('click', copy, true);
-    function copy(e) {
-        var t = e.target, c = t.dataset.copytarget, inp = c ? document.querySelector(c) : null;
-        if (inp && inp.select) {
-            inp.select();
-            try {
-                document.execCommand('copy');
-                inp.blur();
-                t.classList.add('copied');
-                setTimeout(function () {
-                    t.classList.remove('copied');
-                }, 1500);
-            } catch (err) {
-                alert('please press Ctrl/Cmd+C to copy');
-            }
-        }
-    }
-}());
-//# sourceURL=pen.js
-</script>
+Welcome! [SPLASH PAGE TO BE MADE]
