adds authentication devise and users model

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -338,3 +338,13 @@ a {
   }
 }
 
+.alert{
+    background-color: #4de89e;
+    padding: 0.7em 1.5em;
+    margin: 1em 1.5em;
+    color: black;
+    outline: none;
+    border: 1px solid #d6dce0;
+    border-radius: 1.5em;
+}
+
