--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,6 +10,7 @@
 			<%= time_ago_in_words(comment.created_at) %> Ago
 		</p>
 	</div>
-
+	<% if user_signed_in? %>
 	<p><%= link_to 'Delete', [comment.snipit, comment], method: :delete, class: "button", data: {confirm: 'Are you sure?'} %></p>
+	<% end %>
 </div>
