--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,12 +8,13 @@
 	<ul>
 		<li class="category"> Website</li>
 		<li> <%= link_to "PBHS Shortcodes", pbhs_path %></li>
+		<li><%= link_to "All Snippits", snipits_path %></li>
 		<li> <%= link_to "How To Use", about_path %></li>
 	</ul>
 
 	<ul>
 		<li class="category"> Categories</li>
-		<li><%= link_to "All Snippits", snipits_path %></li>
+		<li><%= link_to "All", snipits_path %></li>
 		<li><a href="#">Web Development</a></li>
 		<li><a href="#">Sales</a></li>
 		<li><a href="#">SEO</a></li>
@@ -22,5 +23,7 @@
 		<li><a href="#">Support</a></li>
 
 	</ul>
+	<% if !user_signed_in? %>
 	<p class="sign_in">User Login</p>
+	<% end %>
 </div>
