--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,18 @@
 <div id="main_content">
 	<div id="header">
 		<% if current_page?(snipits_path)%>
-		<p> <%= link_to "All Posts", snipits_path %></p>
+		<p> <%= link_to "All Snippits", snipits_path %></p>
 		<% elsif current_page?(about_path)%>
 		<p> About </p>
 		<% else %>
-		<%=link_to "Go Home", :back %>
+		<%=link_to "All Snippits", snipits_path %>
 		<% end %>
+		<% if user_signed_in? %>
 		<div class="buttons">
 			<button class="button"> <%= link_to "New Post", new_snipit_path %></button>
 			<button class="button"> Log Out</button>
 		</div>
+		<% end %>
 	</div>
 
 <% flash.each do |name, msg| %>
