--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div id="page_wrapper">
 	<div id="profile_image">
-		<%= image_tag "gio.jpg" %>
+		<%= image_tag "#{}" %>
 	</div>
 
 	<div id="content">
