--- a/app/views/snipits/show.html.erb
+++ b/app/views/snipits/show.html.erb
@@ -5,8 +5,10 @@
 
 	<p class="date">
 		Submitted <%= time_ago_in_words(@snipit.created_at) %> Ago 
+		<% if user_signed_in? %>
 		| <%= link_to "Edit", edit_snipit_path(@snipit) %>
 		| <%= link_to "Delete", snipit_path(@snipit), method: :delete, data: {confirm: 'Are you sure?'} %>
+		<% end  %>
 	</p>
 
 	<p class="body">
@@ -16,9 +18,10 @@
 	<div id="comments">
 		<h2><%= @snipit.comments.count%> Comments</h2>
 			<%= render @snipit.comments %>
-
+		<% if user_signed_in? %>
 		<h3>Add a comment:</h3>
 		<%= render 'comments/form' %>
+		<% end %>
 	</div>
 
 </div>
