fixes the layout of the site adding correct links

--- a/app/views/welcome/pbhs.html.erb
+++ b/app/views/welcome/pbhs.html.erb
@@ -1,11 +1,28 @@
+<div id="page_wrapper">
 <h1>Testing the clipboard</h1>
 <label for="website">Website:</label>
 <input readonly type="text" id="website" value="[PRACTICE_NAME]">
-<button data-copytarget="#website">copy</button>
+<button class="button" data-copytarget="#website" style="padding: .6em 0.5em;">copy</button>
 
 <label for="twitter">Twitter:</label>
 <input readonly type="text" id="twitter" value="[FULL_NAME]">
-<button data-copytarget="#twitter">copy</button>
+<button class="button" data-copytarget="#twitter" style="padding: .6em 0.5em;">copy</button>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout-53beeb1a007ec32040abaf4c9385ebfc.js"></script>
 <script>(function () {
