--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,7 +64,7 @@ button {
   font-size: 0.75em;
   padding: 2px 3px;
   color: #fff;
-  background-color: #22a;
+  background-color: #33acb7;
   border-radius: 3px;
   opacity: 0;
   will-change: opacity, transform;
@@ -148,7 +148,8 @@ a {
   .sign_in {
     position: absolute;
     right: 3em;
-    top: 80%;
+    line-height: 2rem;
+    top: 77%;
     font-size: .8em;
     color: #9eafba;
   }
@@ -339,7 +340,7 @@ a {
 }
 
 .alert{
-    background-color: #4de89e;
+    background-color: #55eeb4;
     padding: 0.7em 1.5em;
     margin: 1em 1.5em;
     color: black;
