--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -24,6 +24,7 @@
 
 	</ul>
 	<% if !user_signed_in? %>
-	<p class="sign_in">User Login</p>
+	<p class="sign_in"> <%= link_to "User Login", new_user_session_path %><br/>
+	 <%= link_to "User Sign Up", new_user_registration_path %></p>
 	<% end %>
 </div>
