--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 <%= render 'layouts/sidebar' %>
@@ -20,7 +22,7 @@
 		<% if user_signed_in? %>
 		<div class="buttons">
 			<button class="button"> <%= link_to "New Post", new_snipit_path %></button>
-			<button class="button"> Log Out</button>
+			<button class="button"> <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></button>
 		</div>
 		<% end %>
 	</div>
