--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,17 +58,17 @@ button {
 .copied::after {
   position: absolute;
   top: 12%;
-  right: 110%;
+  right: 130%;
   display: block;
   content: "copied";
-  font-size: 0.75em;
+  font-size: 1.75em;
   padding: 2px 3px;
   color: #fff;
   background-color: #33acb7;
   border-radius: 3px;
   opacity: 0;
   will-change: opacity, transform;
-  animation: showcopied 1.5s ease;
+  animation: showcopied 2.5s ease;
 }
 
 @keyframes showcopied {
@@ -347,5 +347,9 @@ a {
     outline: none;
     border: 1px solid #d6dce0;
     border-radius: 1.5em;
+}
+
+*::selection {
+    background-color: #33acb7;
 }
 
