makes the pbhs shortcode clickable and snipits clickable

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,11 +6,11 @@
 	<div id="content">
 		<h1>How to Use This app </h1>
 		<ol>
-			<li>Lorem Ipsum Dolor</li>
-			<li>Lorem Ipsum Dolor</li>
-			<li>Lorem Ipsum Dolor</li>
-			<li>Lorem Ipsum Dolor</li>
-			
+			<li>First Of all, The PBHS SHORTCODE page should be self explanatory! Click "Copy Me"</li>
+			<li>Be A good User! Make code snipits that could help other users copy / paste faster!</li>
+			<li>Put The snipits in the right category!</li>		
 		</ol>
+		<h2>...</h2>
+		<h2>This Project is still in development! I'm working on addiing better functionality / Features since it's currently in its MVP - Gio</h2>
 	</div>
 </div>
