--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,27 @@
-Welcome! [SPLASH PAGE TO BE MADE]
+<div class="section no-pad-bot" id="index-full-banner">
+
+<div id="page_wrapper" class="text-center">
+<h1>Welcome to the Snipit App!</h1>
+<h2>"An Awesome Copy To Clip-Board App for my fellow PBHSers" - Gio</h2>
+
+<img class="image" src="assets/mindblown.gif">
+<br/>
+<br/>
+<div class="row">
+	<div class="col-2"></div>
+	<div class="col-1"><button style="background: #f5f7f9;left: 46px;" class="button text-center"><%= link_to "Log In", new_user_session_path %></button></div>
+	<div class="col-1"><button  style="background: #f5f7f9; left: 6px;" class="button text-center"> <%= link_to "Sign Up", new_user_registration_path %></button></div>
+	<div class="col-2"></div>
+</div>
+
+
+</div>
+<div class="call_2">
+
+	<div class="row">
+	<div class="col-2"></div>
+	<div class="col-2"><button style="background: #f5f7f9;left: 46px;" class="button text-center"><%= link_to "Visit The PBHS Shortcodes", pbhs_path %> </button></div>
+	<div class="col-2"></div>
+</div>
+</div>
+</div>
