fixes homepage image for heroku

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 <h1>Welcome to the Snipit App!</h1>
 <h2>"An Awesome Copy To Clip-Board App for my fellow PBHSers" - Gio</h2>
 
-<img class="image" src="assets/mindblown.gif">
+<%= image_tag("mindblown.gif", :alt => "mindblowns") %>
 <br/>
 <br/>
 <div class="row">
