adds authentication to hp layout

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,19 +1,32 @@
 <div class="section no-pad-bot" id="index-full-banner">
 
 <div id="page_wrapper" class="text-center">
+<% if !user_signed_in? %>
 <h1>Welcome to the Snipit App!</h1>
 <h2>"An Awesome Copy To Clip-Board App for my fellow PBHSers" - Gio</h2>
-
+<% end %>
+<% if user_signed_in? %>
+<h1> You are currently Logged In!</h1>
+<h2>Thanks for signing In... You should go make a snippit!</h2>
+<% end %>
+<% if !user_signed_in? %>
 <%= image_tag("mindblown.gif", :alt => "mindblowns") %>
 <br/>
 <br/>
+<% end %>
+<% if user_signed_in? %>
+<%= image_tag("hi.gif", :alt => "mindblowns") %>
+<br/>
+<br/>
+<% end %>
+<% if !user_signed_in? %>
 <div class="row">
 	<div class="col-2"></div>
 	<div class="col-1"><button style="background: #f5f7f9;left: 46px;" class="button text-center"><%= link_to "Log In", new_user_session_path %></button></div>
 	<div class="col-1"><button  style="background: #f5f7f9; left: 6px;" class="button text-center"> <%= link_to "Sign Up", new_user_registration_path %></button></div>
 	<div class="col-2"></div>
 </div>
-
+<% end %>
 
 </div>
 <div class="call_2">
