makes whole site full screen but not responsive

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,8 +22,8 @@
 <% if !user_signed_in? %>
 <div class="row">
 	<div class="col-2"></div>
-	<div class="col-1"><button style="background: #f5f7f9;left: 46px;" class="button text-center"><%= link_to "Log In", new_user_session_path %></button></div>
-	<div class="col-1"><button  style="background: #f5f7f9; left: 6px;" class="button text-center"> <%= link_to "Sign Up", new_user_registration_path %></button></div>
+	<div class="col-1"><button style="background: #f5f7f9;left: 50%;" class="button text-center"><%= link_to "Log In", new_user_session_path %></button></div>
+	<div class="col-1"><button  style="background: #f5f7f9; left: 5%;" class="button text-center"> <%= link_to "Sign Up", new_user_registration_path %></button></div>
 	<div class="col-2"></div>
 </div>
 <% end %>
@@ -33,7 +33,7 @@
 
 	<div class="row">
 	<div class="col-2"></div>
-	<div class="col-2"><button style="background: #f5f7f9;left: 46px;" class="button text-center"><%= link_to "Visit The PBHS Shortcodes", pbhs_path %> </button></div>
+	<div class="col-2"><button style="background: #f5f7f9;left: 49%;" class="button text-center"><%= link_to "Visit The PBHS Shortcodes", pbhs_path %> </button></div>
 	<div class="col-2"></div>
 </div>
 </div>
