--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,6 +102,8 @@ a {
 
 #sidebar {
   width: 250px;
+  z-index: 5;
+  margin-right: 250px;
   position: fixed;
   left: 0;
   top: 0;
@@ -179,9 +181,13 @@ a {
 }
 
 #main_content {
-  margin-left: 250px;
+  
+      width: 100%;
+    height: 100%;
+    position: absolute;
   #header {
     padding: 1.3em 3em;
+    margin-left: 250px;
     border-bottom: 1px solid #d6dce0;
     background: #303030;
     color: #9eafba;
@@ -213,6 +219,7 @@ a {
   .post_wrapper {
     padding: 3em;
     border-bottom: 1px solid #d6dce0;
+    margin-left: 250px;
     .title {
       margin: 0;
       a {
@@ -232,6 +239,7 @@ a {
   }
   #post_content {
     padding: 1em 3em;
+        margin-left: 250px;
     .title {
       font-weight: 500;
       text-decoration: none;
@@ -292,6 +300,7 @@ a {
   }
   #page_wrapper {
     padding: 3em;
+    margin-left: 250px;
     #profile_image {
       width: 300px;
       float: left;
@@ -439,11 +448,13 @@ a {
 #index-full-banner {
     background: linear-gradient(rgba(165, 208, 213, 0.98), rgba(151, 133, 159, 0.15)), rgba(0, 0, 0, 0.55) url(/assets/stars-e70b9793abf5d41321c9fe2d44bf01d3f4df6b39b0d7d7458c79d3f19d8d2162.jpg);
     background-size: cover;
+        width: 100%;
+        
+    height: 100%;
+    position: absolute;
 }
 
-.call_2{
-  height:250px;
-}
+
 
 hr {
     box-sizing: content-box;
