fix alert margin

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -360,6 +360,7 @@ a {
 .alert{
     background-color: #55eeb4;
     padding: 0.7em 1.5em;
+    margin-left: 250px;
     margin: 1em 1.5em;
     color: black;
     outline: none;
