--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -55,7 +55,7 @@ button {
   cursor: pointer;
 }
 
-.copied::after {
+.copied::after, input::after {
   position: absolute;
   top: 12%;
   right: 130%;
@@ -361,7 +361,7 @@ a {
     background-color: #55eeb4;
     padding: 0.7em 1.5em;
     margin-left: 250px;
-    margin: 1em 1.5em;
+    
     color: black;
     outline: none;
     border: 1px solid #d6dce0;
