Adds  Association between user and snipits and adds debugger to development

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -463,3 +463,9 @@ hr {
     overflow: visible;
     margin: 5rem 0;
 }
+
+.debug_dump {
+    
+    margin-left: 270px;
+    background-color: #cef5e3;
+}
