--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+	<%= debug(params) if Rails.env.development? %>
 <%= render 'layouts/sidebar' %>
 <div id="main_content">
 	<div id="header">
