--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,5 +34,12 @@
 <%= yield %>
 </div>
 
+<script>
+
+window.onblur = function () { document.title = 'I miss you come back!'; }
+
+window.onfocus = function () { document.title = 'Welcome Back, Homie!'; }
+
+</script>
 </body>
 </html>
