--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,14 +7,19 @@
 
 	<ul>
 		<li class="category"> Website</li>
+		<% if user_signed_in? %>
 		<li> <%= link_to "PBHS Shortcodes", pbhs_path %></li>
+		<li><%= link_to "My Snipits", current_user %></li>
+		<% else %>
+		<li> <%= link_to "PBHS Shortcodes", pbhs_path %> </li>
 		<li><%= link_to "All Snippits", snipits_path %></li>
 		<li> <%= link_to "How To Use", about_path %></li>
+		<% end %>
 	</ul>
 
 	<ul>
-		<li class="category"> Categories</li>
-		<li><%= link_to "All", snipits_path %></li>
+		<li class="category"> Users</li>
+		<li><%= link_to "All", users_path %></li>
 		<li><a href="#">Web Development</a></li>
 		<li><a href="#">Sales</a></li>
 		<li><a href="#">SEO</a></li>
@@ -26,5 +31,8 @@
 	<% if !user_signed_in? %>
 	<p class="sign_in"> <%= link_to "User Login", new_user_session_path %><br/>
 	 <%= link_to "User Sign Up", new_user_registration_path %></p>
+	 <% else %>
+	<p class="sign_in"><%= link_to "Edit Your Account", edit_user_registration_path %> </p>
+	 	
 	<% end %>
 </div>
