--- a/app/views/snipits/_snipit.erb
+++ b/app/views/snipits/_snipit.erb
@@ -1,5 +1,5 @@
 
-<% @snipits.each do |snipit| %>
+<% obj.each do |snipit| %>
 	<div class="post_wrapper">
 		<div class="row">
             <div class="col-2">			
@@ -26,28 +26,3 @@
         </div> 
 	</div>
 <% end %>
-
-
-<script src="//assets.codepen.io/assets/common/stopExecutionOnTimeout-53beeb1a007ec32040abaf4c9385ebfc.js"></script>
-<script>(function () {
-    'use strict';
-    document.body.addEventListener('click', copy, true);
-    function copy(e) {
-        var t = e.target, c = t.dataset.copytarget, inp = c ? document.querySelector(c) : null;
-        if (inp && inp.select) {
-            inp.select();
-            try {
-                document.execCommand('copy');
-                inp.blur();
-                t.classList.add('copied');
-                setTimeout(function () {
-                    t.classList.remove('copied');
-                }, 1500);
-            } catch (err) {
-                alert('please press Ctrl/Cmd+C to copy');
-            }
-        }
-    }
-}());
-//# sourceURL=pen.js
-</script>
