adds username ability to devise

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 	
 		
 	<div class="well col-2">
-			<p> <%= link_to user.email, user_path(user) %></p>
+			<p> <%= link_to user.username, user_path(user) %></p>
 	</div>
 		
 	
