--- a/app/views/snipits/index.html.erb
+++ b/app/views/snipits/index.html.erb
@@ -5,8 +5,7 @@
             <div class="col-2">			
             	<h2 class="title"> <%= link_to snipit.title, snipit %> </h2>
 				<p class="date"> <%= snipit.created_at.strftime("%B %d, %Y") %></p>
-                <!-- I need to replace the line below with the actual users path & Username -->
-                <!--<p class="date"> Created by: <%= link_to "#{snipit.user}", snipits_path %></p> -->
+                <!-- will come back here <%= link_to "#{snipit.user}", snipits_path %></p>  -->
 			</div> 
 			<div class="peaceout">
             <div class="col-1">            	
