--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 <div id="page_wrapper">
 <% if @user != current_user %>
-<h1> Hey, Welcome To <%= @user.email %>  Page!</h1>
-<h2>Here are <%= @user.email %>'s' snippits!</h2>
+<h1> Hey, Welcome To <%= @user.username %>  Page!</h1>
+<h2>Here are <%= @user.username %>'s' snippits!</h2>
 <% else %>
-<h1> Hey! Welcome To Your Account <%= @user.email %></h1>
-<h2>Here are your snippits </h2>
+<h1> Hey! Welcome To Your Account <%= @user.username %></h1>
+<h2>Here are your snippits... </h2>
 <% end %>
 </div>
 
