--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,7 +9,7 @@
 		<li class="category"> Website</li>
 		<% if user_signed_in? %>
 		<li> <%= link_to "PBHS Shortcodes", pbhs_path %></li>
-		<li><%= link_to "My Snipits", current_user %></li>
+		<li><%= link_to "My Snippits", current_user %></li>
 		<% else %>
 		<li> <%= link_to "PBHS Shortcodes", pbhs_path %> </li>
 		<li><%= link_to "All Snippits", snipits_path %></li>
@@ -18,16 +18,22 @@
 	</ul>
 
 	<ul>
-		<li class="category"> Users</li>
-		<li><%= link_to "All", users_path %></li>
+		<li class="category"> Categories</li>
+		<li><%= link_to "All Snippits", snipits_path %></li>
 		<li><a href="#">Web Development</a></li>
 		<li><a href="#">Sales</a></li>
 		<li><a href="#">SEO</a></li>
 		<li><a href="#">Graphic Design</a></li>
 		<li><a href="#">Account Managers</a></li>
-		<li><a href="#">Support</a></li>
+		<li><a href="#">Support</a></li> 
 
 	</ul>
+
+	<!--
+		<ul>
+		<li class="category"> Users</li>
+		<li><%= link_to "All Users", users_path %></li>
+		</ul> -->
 	<% if !user_signed_in? %>
 	<p class="sign_in"> <%= link_to "User Login", new_user_session_path %><br/>
 	 <%= link_to "User Sign Up", new_user_registration_path %></p>
