changes about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -11,6 +11,6 @@
 			<li>Put The snipits in the right category!</li>		
 		</ol>
 		<h2>...</h2>
-		<h2>This Project is still in development! I'm working on addiing better functionality / Features since it's currently in its MVP - Gio</h2>
+		<h2>This Project is still in development! I'm working on addiing better functionality / Features - Gio</h2>
 	</div>
 </div>
