fixes personal snipits order

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 </div>
 
-<%= render 'snipits/snipit', obj: @user.snipits %>
+<%= render 'snipits/snipit', obj: @user.snipits.order('created_at DESC') %>
 
 
 
