--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@ input, button {
   box-shadow: none;
 }
 
-::-moz-focus-inner { 
+::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
@@ -181,7 +181,7 @@ a {
 }
 
 #main_content {
-  
+
       width: 100%;
     height: 100%;
     position: absolute;
@@ -328,7 +328,7 @@ a {
   .links {
     margin: 2em 0;
   }
-  input[type="text"], input[type="email"], input[type="password"], textarea {
+  input[type="text"], input[type="email"], input[type="password"], input[type="number"], textarea {
     width: 90%;
     border: 1px solid #d6dce0;
     border-radius: .35em;
@@ -362,7 +362,7 @@ a {
     background-color: #55eeb4;
     padding: 0.7em 1.5em;
     margin-left: 250px;
-    
+
     color: black;
     outline: none;
     border: 1px solid #d6dce0;
@@ -383,11 +383,11 @@ a {
     -webkit-background-size: 200% auto;
     -moz-background-size: 200% auto;
     background-position-x:90%;
-    
+
     transition: background-position 0.1s ease-out;
     -webkit-transition: background-position 0.5s ease-out;
-    
-    
+
+
 }
  #pbhs_short input:focus,#pbhs_short input:active {
     background-position: -100% 0;
@@ -409,12 +409,12 @@ a {
 }
 
 .grid-container{
-        width: 100%; 
-        max-width: 1200px;      
+        width: 100%;
+        max-width: 1200px;
     }
 
-    /*-- our cleafix hack -- */ 
-    .row:before, 
+    /*-- our cleafix hack -- */
+    .row:before,
     .row:after {
         content:"";
           display: table ;
@@ -422,12 +422,12 @@ a {
     }
 
     [class*='col-'] {
-        float: left; 
-        min-height: 1px; 
-        width: 16.66%; 
+        float: left;
+        min-height: 1px;
+        width: 16.66%;
         /*-- our gutter -- */
-        
-        
+
+
     }
 
     .col-1{ width: 16.66%; }
@@ -438,7 +438,7 @@ a {
     .col-6{ width: 100%;   }
 
     .outline, .outline *{
-        outline: 1px solid #F6A1A1; 
+        outline: 1px solid #F6A1A1;
     }
 
  p.body{
@@ -453,7 +453,7 @@ a {
     background: linear-gradient(rgba(165, 208, 213, 0.98), rgba(151, 133, 159, 0.15)), rgba(0, 0, 0, 0.55) url(/assets/stars-e70b9793abf5d41321c9fe2d44bf01d3f4df6b39b0d7d7458c79d3f19d8d2162.jpg);
     background-size: cover;
         width: 100%;
-        
+
     height: 100%;
     position: absolute;
 }
@@ -468,7 +468,7 @@ hr {
 }
 
 .debug_dump {
-    
+
     margin-left: 270px;
     background-color: #cef5e3;
 }
@@ -476,4 +476,9 @@ hr {
 .space_yo {
   margin: 25px 0;
   clear: both;
+}
+
+.timeclock_wrapper {
+    margin-bottom: 8rem;
+    border-top: 1px solid #11d5e6;
 }
