Adds sidebar nav

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -20,7 +20,7 @@
 	<ul>
 		<li class="category"> IDK...</li>
 		<li> <%= link_to "Gandalf", gandalf_path %></li>
-
+		<li> <%= link_to "Cookies", cookies_path %></li>
 	</ul>
 
 	<!--
